<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="currentValue" type="com.cherry_blossom.crypto_tracker.TabView.Tabs.Alert.model.CurrentValue"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/last_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_view_last"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.last}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/time_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_view_timestamp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.timestamp}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/price_drop_label" />

                    <EditText
                        android:id="@+id/edit_text_threshold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:hint="@string/price_input_label"/>

                    <CheckBox
                        android:id="@+id/check_box_enable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_button_label"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/volume_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.volume}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/vwap_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_vwap"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.vwap}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/open_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_open"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.open}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/high_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_high"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.high}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/low_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_low"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.low}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/bid_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_bid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.bid}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/ask_label"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/text_view_ask"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{currentValue.ask}"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/darkGreen" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>